kubernetes/cache.yml
apiVersion: v1
kind: Service
metadata:
  name: tosi-cc-svc
  namespace: prod-tosi
spec:
  selector:
    app: tosi
    tier: cache
  ports:
    - port: 6379 # redis 포트와 동일해야 함
      targetPort: 6379
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tosi-cc-dep
  namespace: prod-tosi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tosi
      tier: cache
  template:
    metadata:
      labels:
        app: tosi
        tier: cache
    spec:
      containers:
        - name: tosi-cache
          image: redis:6.2
