kubernetes/tale.yml
apiVersion: v1
kind: Service
metadata:
  name: tosi-tale-svc
  namespace: prod-tosi
spec:
  selector:
    app: tosi-tale
    tier: backend
  ports:
    - port: 80 # 80으로 연결하면 http 기본 포트이기 때문에 포트 명시 필요없음
      targetPort: 8080
  type: ClusterIP # ingress가 외부 명령을 받아서 전달
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tosi-tale-dep
  namespace: prod-tosi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tosi-tale
      tier: backend
  template:
    metadata:
      labels:
        app: tosi-tale
        tier: backend
    spec:
      containers:
        - name: tosi-be-tale
          image: dyckerkim/tosi-be-tale:latest # pod 재시작시 최신 이미지 pull
          # livenessProbe: # 헬스 체크
          #   httpGet:
          #     path: /api/tales/1 # 해당 경로로 HTTP 요청을 보내 상태 확인
          #     port: 8080
          #   initialDelaySeconds: 15 # 컨테이너 시작 후 15초 뒤에 처음으로 헬스 체크 요청
          #   periodSeconds: 10 # 이후 매 10초마다 헬스 체크 요청을 보냄
