kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tosi-ingress
  namespace: prod-tosi
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/group.name: tosi-alb # 그룹당 ALB 1개 생성, host로 구분
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip # service가 clusterIp이므로 ip 타입만 가능
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:058264434288:certificate/d84e3870-022a-4b82-a74a-d6006f9a6161
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
  labels:
    app: ingress
spec:
  ingressClassName: alb
  rules:
    - host: www.tosi.world
      http:
        paths:
          - pathType: Prefix
            path: "/api/users"
            backend:
              service:
                name: tosi-user-svc
                port:
                  number: 80
          - pathType: Prefix
            path: "/api/tales"
            backend:
              service:
                name: tosi-tale-svc
                port:
                  number: 80
          - pathType: Prefix
            path: "/api/custom-tales"
            backend:
              service:
                name: tosi-customtale-svc
                port:
                  number: 80
          - pathType: Prefix
            path: "/api/chat"
            backend:
              service:
                name: tosi-chat-svc
                port:
                  number: 80
          # v3/api-docs는 문서 데이터, /swagger-ui는 문서 페이지라 둘다 라우팅 해야 함
          # 동화 서비스에 문서를 Aggregate해서 문서 페이지는 동화 서비스로 라우팅 함
          - pathType: Prefix
            path: "/swagger-ui"
            backend:
              service:
                name: tosi-tale-svc
                port:
                  number: 80
          - path: /docs/tales
            pathType: Prefix
            backend:
              service:
                name: tosi-tale-svc
                port:
                  number: 80
          - path: /docs/users
            pathType: Prefix
            backend:
              service:
                name: tosi-user-svc
                port:
                  number: 80
          - path: /docs/custom-tales
            pathType: Prefix
            backend:
              service:
                name: tosi-customtale-svc
                port:
                  number: 80
          - path: /docs/chat
            pathType: Prefix
            backend:
              service:
                name: tosi-chat-svc
                port:
                  number: 80
          - path: /actuator/tales
            pathType: Prefix
            backend:
              service:
                name: tosi-tale-svc
                port:
                  number: 80
